# CodeExamples

./: .cproject  .project  README.md
.metadata/.plugins/org.eclipse.cdt.core/: MultipleInheritance.1473141811272.pdom  MultipleInheritance.1473248869779.pdom  MultipleInheritance.1473320490888.pdom  language.settings.xml
.metadata/.plugins/org.eclipse.core.resources/.projects/MultipleInheritance/.indexes/: history.index  properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/MultipleInheritance/.indexes/de/1f/: history.index  properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/MultipleInheritance/.indexes/de/a1/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/MultipleInheritance/.indexes/de/a2/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/MultipleInheritance/.indexes/de/a3/: history.index  properties.index
.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.ui.workbench/: workbench.xml  workingsets.xml
ChainOfResponsibility/: ATM.h  CMakeLists.txt  Logger.h  main.cpp
ChainOfResponsibility/uml/: class.uxf
CopyAndSwap/: README.txt
CopyAndSwap/inc/: MyArray.h  MyArray2.h
CopyAndSwap/src/: main.cpp
CuriouslyRecurringTemplatePattern/: .gitignore  CMakeLists.txt  main.cpp
CuriouslyRecurringTemplatePattern/inc/: GenericVisitor.h  SpecialVisitor.h  TreeNode.h
CuriouslyRecurringTemplatePattern/src/: SpecialVisitor.cpp
DependencyInjection/: .gitignore  CMakeLists.txt  README.md  main.cpp
DependencyInjection/inc/: DBConnector.h  Foo.h  TextWritter.h
DependencyInjection/src/: DBConnector.cpp  Foo.cpp  TextWritter.cpp
DependencyInjection/test/: CMakeLists.txt  TestTextWritter.cpp  TestTextWritter.h  main.cpp
FacadePattern/: .gitignore  CMakeLists.txt  README.md  main.cpp
FactoryMethod/: .gitignore  CMakeLists.txt  readMe
FactoryMethod/inc/factory/: carFactory.hpp  chessFactory.hpp  dollFactory.hpp  toyFactory.hpp
FactoryMethod/inc/product/: car.hpp  chess.hpp  doll.hpp  toy.hpp
FactoryMethod/src/: main.cpp
FactoryMethod/src/factory/: carFactory.cpp  chessFactory.cpp  dollFactory.cpp
FactoryMethod/src/product/: car.cpp  chess.cpp  doll.cpp  toy.cpp
IndependentObserverPattern/: .cproject  .gitignore  .project  CMakeLists.txt  main.cpp
IndependentObserverPattern/.csettings/: cdt.managedbuild.toolchain.gnu.base.75381400_cdtBuildSystem  cdt.managedbuild.toolchain.gnu.base.75381400_org.eclipse.cdt.core.settings
IndependentObserverPattern/event/: Event.h
IndependentObserverPattern/subject/: Subject.h
MVPParadigm/: .cproject  .project  CMakeLists.txt  main.cpp
MVPParadigm/model/: ApplicationModel.cpp  ApplicationModel.h
MVPParadigm/presenter/: ApplicationPresenter.cpp  ApplicationPresenter.h  Presenter.cpp  Presenter.h
MVPParadigm/uml/: classdiagram.uxf
MVPParadigm/view/: ApplicationView.cpp  ApplicationView.h
Memento/: CMakeLists.txt  main.cpp
Memento/inc/: CareTaker.hpp  Text.hpp  TextMemento.hpp
Memento/src/: CareTaker.cpp  Text.cpp  TextMemento.cpp
MultipleInheritance/: .gitignore  CMakeLists.txt  main.cpp
MultipleInheritance/inc/scenario1/: frontOfficer.hpp  individual.hpp  staff.hpp
MultipleInheritance/inc/scenario2/: elevator.hpp  fireEngine.hpp  truck.hpp
MultipleInheritance/inc/scenario3/: ovipar.hpp  ovovivipar.hpp  vivipar.hpp
MultipleInheritance/inc/scenario3b/: animal.hpp  ovipar.hpp  ovovivipar.hpp  vivipar.hpp
MultipleInheritance/src/scenario1/: frontOfficer.cpp  individual.cpp  staff.cpp
MultipleInheritance/src/scenario2/: elevator.cpp  fireEngine.cpp  truck.cpp
MultipleInheritance/src/scenario3/: animal.cpp  ovipar.cpp  ovovivipar.cpp  vivipar.cpp
MultipleInheritance/src/scenario3b/: animal.cpp  ovipar.cpp  vivipar.cpp
MultipleInheritance/uml/: scenario1.uxf  scenario2.uxf  scenario3.uxf
NonVirtualInterfacePattern/: .gitignore  main.cpp
NonVirtualInterfacePattern/inc/: Triangle.h
OdbSample/: .gitignore  CMakeLists.txt  README.md  main.cpp
OdbSample/env/odb-mssql/lib/: libodb-mssql.la
OdbSample/env/odb-mssql/lib/pkgconfig/: libodb-mssql.pc
OdbSample/inc/: database.h
OdbSample/inc/odb_gen/: person_odb.cpp  person_odb.h  person_odb_inline.h
PimplIdiom/: CMakeLists.txt  README.md  Timespan.cpp  Timespan.h  main.cpp
PimplIdiom/inc/: Timespan.h
PimplIdiom/src/: Timespan.cpp
RAII/: CMakeLists.txt  README.md  main.cpp
RAII/inc/: File.h
RAII/src/: File.cpp
RAIISingleton/: CMakeLists.txt  README.md  main.cpp
RAIISingleton/inc/: File.h
RAIISingleton/src/: File.cpp
RuleOfFiveIdiom/: .gitignore  CMakeLists.txt  README.md
RuleOfFiveIdiom/src/: main.cpp
SimpleObserverPattern/: CMakeLists.txt  main.cpp
SimpleObserverPattern/observer/: ConcreteObserverA.h  ConcreteObserverB.cpp  Observer.cpp  Observer.h
SimpleObserverPattern/subject/: Subject.cpp  Subject.h
Singleton/: README.md
Singleton/1. Old Version/: CMakeLists.txt
Singleton/1. Old Version/inc/: File.h
Singleton/1. Old Version/src/: File.cpp
Singleton/2. C++ 03 Version/: CMakeLists.txt  main.cpp
Singleton/2. C++ 03 Version/inc/: File.h
Singleton/2. C++ 03 Version/src/: File.cpp
Singleton/3. C++ 11 Version/: CMakeLists.txt
Singleton/3. C++ 11 Version/inc/: File.h
ThreadingForMoreResponsiveUI/: .gitignore  CMakeLists.txt  readMe
ThreadingForMoreResponsiveUI/inc/: crawlingPresenter.h  crawlingView.h
ThreadingForMoreResponsiveUI/src/: main.cpp
ThreadingForMoreResponsiveUI/src/mainFeature/: crawlingPresenter.cpp  crawlingView.cpp
URDLTest/: CMakeLists.txt  README.md  main.cpp
VirtualInheritance/DelegateToSisterClass/: CMakeLists.txt  README.md  main.cpp
VirtualInheritance/MultipleInheritance/: CMakeLists.txt  README.md  main.cpp
VirtualInheritance/VirtualInheritance/: CMakeLists.txt  README.md  main.cpp
observer/: ConcreteObserverA.cpp  ConcreteObserverB.h
(+8 files in other folders)
